--- a/README
+++ b/README
@@ -3,3 +3,7 @@
 A Radiant Extension to do static html file caching
 
 Then Apache (et. al.) can be used to serve the pages without hitting the ruby app
+
+
+= Note
+extension needs to be checked out as 'static_html_caching' so that radiant's extension loading picks it up
