extra careful caching - cached files get .cache.html extensions

--- a/README.rdoc
+++ b/README.rdoc
@@ -17,22 +17,22 @@ The cache directory needs to be in a web accessible location, so config/environm
 == Rewrite Rules
 You need some apache config along the lines of this (note that <code>/radiant-cache</code> here matches <code>/public/radiant-cache</code> in "Radiant Setup" above - if these don't agree Radiant will write a cache, but Apache will not use it):
 
-  # Rewrite / to cache/index.html if it exists
-  RewriteCond %{DOCUMENT_ROOT}/radiant-cache/index.html -f
-  RewriteRule ^(/)?$ /radiant-cache/index.html [P,QSA,L]
+  # Rewrite / to cache/index.cache.html if it exists
+  RewriteCond %{DOCUMENT_ROOT}/radiant-cache/index.cache.html -f
+  RewriteRule ^(/)?$ /radiant-cache/index.cache.html [P,QSA,L]
   
   # Rewrite /path/to/page to cache/path/to/page if it exists (for paths already containing an extension)
   RewriteCond %{DOCUMENT_ROOT}/radiant-cache%{REQUEST_URI} -f
   RewriteRule . /radiant-cache%{REQUEST_URI} [P,QSA,L]
   
-  # Rewrite /path/to/page to cache/path/to/page.html if it exists
-  RewriteCond %{DOCUMENT_ROOT}/radiant-cache%{REQUEST_URI}.html -f
-  RewriteRule . /radiant-cache%{REQUEST_URI}.html [P,QSA,L]
+  # Rewrite /path/to/page to cache/path/to/page.cache.html if it exists
+  RewriteCond %{DOCUMENT_ROOT}/radiant-cache%{REQUEST_URI}.cache.html -f
+  RewriteRule . /radiant-cache%{REQUEST_URI}.cache.html [P,QSA,L]
   
-  # Rewrite /path/to/page/ (trailing slash) to cache/path/to/page.html if it exists
+  # Rewrite /path/to/page/ (trailing slash) to cache/path/to/page.cache.html if it exists
   RewriteCond %{REQUEST_URI} ^(.+)/$
-  RewriteCond %{DOCUMENT_ROOT}/radiant-cache$1.html -f
-  RewriteRule ^(.+)/$ /radiant-cache$1.html [P,QSA,L]
+  RewriteCond %{DOCUMENT_ROOT}/radiant-cache$1.cache.html -f
+  RewriteRule ^(.+)/$ /radiant-cache$1.cache.html [P,QSA,L]
   
 == If using Passenger
 If you're using passenger and don't want it to spawn a Rails process just to serve cached content you need to add 
